--- a/react-router/src/App.css
+++ b/react-router/src/App.css
@@ -1,15 +1,15 @@
-nav {
+.mainNav {
   background-color: blue;
   padding: 15px 30px;
 }
 
-nav a {
+.mainNav a {
   color: white;
   text-decoration: none;
   margin-right: 20px;
 }
 
-nav a.active {
+.mainNav a.active {
   font-weight: bold;
   font-size: 20px;
 }
